# dancey

./: Cargo.toml  yes
benches/: benchmark.rs
src/: app.rs  lib.rs  main.rs  project_manager.rs  widgets.rs
src/internals/: fs.rs  library.rs  mem.rs  mod.rs  sample.rs  utils.rs
src/ui/: mod.rs
src/ui/panels/: lib.rs  media.rs  mod.rs  playlist.rs  root.rs
src/ui/windows/: mod.rs  settings.rs
