[package]
name = "dancey"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
derive_more = { version = "1.0.0", features = ["debug"] }
eframe = {version = "0.30.0", features = ["persistence"]}
egui = "0.30.0"
egui_extras = {version = "0.30.0", features = ["all_loaders"]}
rfd = "0.15.2"
rodio = {version = "0.20.1", features = ["symphonia-all"]}
serde = "1.0.217"
parking_lot = {version = "0.12.3", features = ["serde"]}
symphonia = {version = "0.5.4", features = ["all"]}
egui-toast = "0.16.0"
itertools = "0.14.0"
rubato = "0.16.1"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = "z"  # Optimize for size.
